force-app/main/default/objects/Dossier__c/fields/Copie_Passeport__c.field-meta.xml
<CustomField>
    <fullName>Copie_Passeport__c</fullName>
    <inlineHelpText>Passeport -  -  - Copie</inlineHelpText>
    <label>Passeport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requis</fullName>
            </value>
            <value>
                <fullName>Non requis</fullName>
                <default>true</default>
                <label>Non requis</label>
            </value>
            <value>
                <fullName>Reçu copie</fullName>
            </value>
            <value>
                <fullName>Reçu original</fullName>
            </value>
            <value>
                <fullName>Reçu copie &amp; original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>