force-app/main/default/objects/Dossier__c/fields/Cout_du_cr_dit_aux_conditions_propos_es__c.field-meta.xml
<CustomField>
    <fullName>Cout_du_cr_dit_aux_conditions_propos_es__c</fullName>
    <label>Cout du crédit aux conditions proposées</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>