force-app/main/default/objects/Dossier__c/fields/D_Accord_client_sur_conditions_reserves__c.field-meta.xml
<CustomField>
    <fullName>D_Accord_client_sur_conditions_reserves__c</fullName>
    <label>Dte-Accrd clt sur conditions/reserves</label>
    <type>Date</type>
</CustomField>