force-app/main/default/objects/Dossier__c/fields/D_Attestation_d_compte_Solde_du_cr_dit__c.field-meta.xml
<CustomField>
    <fullName>D_Attestation_d_compte_Solde_du_cr_dit__c</fullName>
    <inlineHelpText>D Attestation de decompte/Solde du crédit objet du rachat</inlineHelpText>
    <label>D Attestation décompte/Solde du crédit</label>
    <type>Date</type>
</CustomField>