force-app/main/default/objects/Dossier__c/fields/D_Attestation_de_main_lev_e__c.field-meta.xml
<CustomField>
    <fullName>D_Attestation_de_main_lev_e__c</fullName>
    <inlineHelpText>D Attestation de main levée  -  - Signé-e &amp; Cacheté-e</inlineHelpText>
    <label>D Attestation de main levée</label>
    <type>Date</type>
</CustomField>