force-app/main/default/objects/Dossier__c/fields/D_Attestation_de_pension__c.field-meta.xml
<CustomField>
    <fullName>D_Attestation_de_pension__c</fullName>
    <label>D Attestation de pension</label>
    <type>Date</type>
</CustomField>