force-app/main/default/objects/Dossier__c/fields/D_Attestation_de_salaire_2mois__c.field-meta.xml
<CustomField>
    <fullName>D_Attestation_de_salaire_2mois__c</fullName>
    <label>D Attestation de salaire - 2 MOIS</label>
    <type>Date</type>
</CustomField>