force-app/main/default/objects/Dossier__c/fields/D_Autorisation_administrative_d_exercice__c.field-meta.xml
<CustomField>
    <fullName>D_Autorisation_administrative_d_exercice__c</fullName>
    <label>D Autorisation administrative d&apos;exercice</label>
    <type>Date</type>
</CustomField>