force-app/main/default/objects/Dossier__c/fields/D_Avis_d_imposition_2ans__c.field-meta.xml
<CustomField>
    <fullName>D_Avis_d_imposition_2ans__c</fullName>
    <label>D Avis d&apos;imposition - 2 ANS</label>
    <type>Date</type>
</CustomField>