force-app/main/default/objects/Dossier__c/fields/D_Bilans_CPC_ACTIF_PASSIF_sans_annexes__c.field-meta.xml
<CustomField>
    <fullName>D_Bilans_CPC_ACTIF_PASSIF_sans_annexes__c</fullName>
    <label>D Bilans (CPC+ACTIF+PASSIF sans annexes)</label>
    <type>Date</type>
</CustomField>