force-app/main/default/objects/Dossier__c/fields/D_Bulletins_de_paie_3mois__c.field-meta.xml
<CustomField>
    <fullName>D_Bulletins_de_paie_3mois__c</fullName>
    <label>D Bulletins de paie - 3 MOIS</label>
    <type>Date</type>
</CustomField>