force-app/main/default/objects/Dossier__c/fields/D_Bulletins_de_paie_6mois__c.field-meta.xml
<CustomField>
    <fullName>D_Bulletins_de_paie_6mois__c</fullName>
    <label>D Bulletins de paie - 6 MOIS</label>
    <type>Date</type>
</CustomField>