force-app/main/default/objects/Dossier__c/fields/D_Carte_de_sejour_dans_pays_de_residence__c.field-meta.xml
<CustomField>
    <fullName>D_Carte_de_sejour_dans_pays_de_residence__c</fullName>
    <label>D Carte de séjour dans pays de résidence</label>
    <type>Date</type>
</CustomField>