force-app/main/default/objects/Dossier__c/fields/D_Certificat_de_propri_t_du_bien__c.field-meta.xml
<CustomField>
    <fullName>D_Certificat_de_propri_t_du_bien__c</fullName>
    <inlineHelpText>Certificat de propriété du bien objet du crédit demandé</inlineHelpText>
    <label>D Certificat de propriété du bien</label>
    <type>Date</type>
</CustomField>