force-app/main/default/objects/Dossier__c/fields/D_Certificats_fonciers_ou_Moulkia__c.field-meta.xml
<CustomField>
    <fullName>D_Certificats_fonciers_ou_Moulkia__c</fullName>
    <label>D Certificats fonciers ou Moulkia</label>
    <type>Date</type>
</CustomField>