force-app/main/default/objects/Dossier__c/fields/D_CIN_MAROCAINE__c.field-meta.xml
<CustomField>
    <fullName>D_CIN_MAROCAINE__c</fullName>
    <label>D CIN MAROCAINE</label>
    <type>Date</type>
</CustomField>