force-app/main/default/objects/Dossier__c/fields/D_Compromis_de_vente__c.field-meta.xml
<CustomField>
    <fullName>D_Compromis_de_vente__c</fullName>
    <label>D Compromis de vente</label>
    <type>Date</type>
</CustomField>