force-app/main/default/objects/Dossier__c/fields/D_Confirmation_Envoi_l_analyse__c.field-meta.xml
<CustomField>
    <fullName>D_Confirmation_Envoi_l_analyse__c</fullName>
    <label>Dte - Confirmation Envoi à l&apos;analyse</label>
    <type>Date</type>
</CustomField>