force-app/main/default/objects/Dossier__c/fields/D_Contrat_de_bail__c.field-meta.xml
<CustomField>
    <fullName>D_Contrat_de_bail__c</fullName>
    <label>D Contrat de bail</label>
    <type>Date</type>
</CustomField>