force-app/main/default/objects/Dossier__c/fields/D_Contrat_de_travail_CDI__c.field-meta.xml
<CustomField>
    <fullName>D_Contrat_de_travail_CDI__c</fullName>
    <label>D Contrat de travail CDI</label>
    <type>Date</type>
</CustomField>