force-app/main/default/objects/Dossier__c/fields/D_Contrat_de_travail_homologue__c.field-meta.xml
<CustomField>
    <fullName>D_Contrat_de_travail_homologue__c</fullName>
    <label>D Contrat de travail homologué</label>
    <type>Date</type>
</CustomField>