force-app/main/default/objects/Dossier__c/fields/D_Decision_banque_re_Retour_charges__c.field-meta.xml
<CustomField>
    <fullName>D_Decision_banque_re_Retour_charges__c</fullName>
    <label>Dte-Decision banque re-Retour à charges</label>
    <type>Date</type>
</CustomField>