force-app/main/default/objects/Dossier__c/fields/D_Declaration_sur_l_honneur_des_revenus__c.field-meta.xml
<CustomField>
    <fullName>D_Declaration_sur_l_honneur_des_revenus__c</fullName>
    <label>D Declaration sur l&apos;honneur des revenus</label>
    <type>Date</type>
</CustomField>