force-app/main/default/objects/Dossier__c/fields/D_Depot_Banque_P2_3__c.field-meta.xml
<CustomField>
    <fullName>D_Depot_Banque_P2_3__c</fullName>
    <label>Dte - Dépôt Banque P2et3</label>
    <type>Date</type>
</CustomField>