force-app/main/default/objects/Dossier__c/fields/D_Devis_de_construction__c.field-meta.xml
<CustomField>
    <fullName>D_Devis_de_construction__c</fullName>
    <label>D Devis de construction</label>
    <type>Date</type>
</CustomField>