force-app/main/default/objects/Dossier__c/fields/D_Devis_de_notaire_Sign_e_Cachet_e__c.field-meta.xml
<CustomField>
    <fullName>D_Devis_de_notaire_Sign_e_Cachet_e__c</fullName>
    <label>D Devis de notaire - Signé-e &amp; Cacheté-e</label>
    <type>Date</type>
</CustomField>