force-app/main/default/objects/Dossier__c/fields/D_Dossier_Constitue_P2_3__c.field-meta.xml
<CustomField>
    <fullName>D_Dossier_Constitue_P2_3__c</fullName>
    <label>Dte - Dossier Constitué P2et3</label>
    <type>Date</type>
</CustomField>