force-app/main/default/objects/Dossier__c/fields/D_Dossier_debloque_systeme_banque__c.field-meta.xml
<CustomField>
    <fullName>D_Dossier_debloque_systeme_banque__c</fullName>
    <label>Dte - Dossier débloqué système banque</label>
    <type>Date</type>
</CustomField>