force-app/main/default/objects/Dossier__c/fields/D_Engagement_de_domiciliation_de_revenus__c.field-meta.xml
<CustomField>
    <fullName>D_Engagement_de_domiciliation_de_revenus__c</fullName>
    <label>D Engagement de domiciliation de revenus</label>
    <type>Date</type>
</CustomField>