force-app/main/default/objects/Dossier__c/fields/D_Engagement_de_domiciliation_du_salaire__c.field-meta.xml
<CustomField>
    <fullName>D_Engagement_de_domiciliation_du_salaire__c</fullName>
    <label>D Engagement de domiciliation du salaire</label>
    <type>Date</type>
</CustomField>