force-app/main/default/objects/Dossier__c/fields/D_Engagement_de_transfer__c.field-meta.xml
<CustomField>
    <fullName>D_Engagement_de_transfer__c</fullName>
    <label>D Engagement de transfer</label>
    <type>Date</type>
</CustomField>