force-app/main/default/objects/Dossier__c/fields/D_Env_acc_sign_cach_ou_OPC_not__c.field-meta.xml
<CustomField>
    <fullName>D_Env_acc_sign_cach_ou_OPC_not__c</fullName>
    <label>Dte-Env l&apos;acc sign cach ou l&apos;OPC au not</label>
    <type>Date</type>
</CustomField>