force-app/main/default/objects/Dossier__c/fields/D_Env_contr_pret_signes_leg_bq__c.field-meta.xml
<CustomField>
    <fullName>D_Env_contr_pret_signes_leg_bq__c</fullName>
    <label>Dte-Env contr de prêt signés leg à la bq</label>
    <type>Date</type>
</CustomField>