force-app/main/default/objects/Dossier__c/fields/D_Env_cp_contr_not_pour_ed_min__c.field-meta.xml
<CustomField>
    <fullName>D_Env_cp_contr_not_pour_ed_min__c</fullName>
    <label>Dte-Env cp contr au not pour l&apos;éd de min</label>
    <type>Date</type>
</CustomField>