force-app/main/default/objects/Dossier__c/fields/D_Env_min_serv_jur_via_ag_pour_val__c.field-meta.xml
<CustomField>
    <fullName>D_Env_min_serv_jur_via_ag_pour_val__c</fullName>
    <label>Dte-Env min au serv jur(via ag)pour val</label>
    <type>Date</type>
</CustomField>