force-app/main/default/objects/Dossier__c/fields/D_Envoi_des_conditions2_au_client__c.field-meta.xml
<CustomField>
    <fullName>D_Envoi_des_conditions2_au_client__c</fullName>
    <label>Dte - Envoi des conditions 2 au client</label>
    <type>Date</type>
</CustomField>