force-app/main/default/objects/Dossier__c/fields/D_Equivalent_de_bilan__c.field-meta.xml
<CustomField>
    <fullName>D_Equivalent_de_bilan__c</fullName>
    <label>D Equivalent de bilan</label>
    <type>Date</type>
</CustomField>