force-app/main/default/objects/Dossier__c/fields/D_Etat_d_engagement__c.field-meta.xml
<CustomField>
    <fullName>D_Etat_d_engagement__c</fullName>
    <label>D Etat d&apos;engagement</label>
    <type>Date</type>
</CustomField>