force-app/main/default/objects/Dossier__c/fields/D_Exemplaires_docs_envoyes_au_client__c.field-meta.xml
<CustomField>
    <fullName>D_Exemplaires_docs_envoyes_au_client__c</fullName>
    <label>Dte-Expl de docs envoyés au client</label>
    <type>Date</type>
</CustomField>