force-app/main/default/objects/Dossier__c/fields/D_Expertise_du_bien_realisee__c.field-meta.xml
<CustomField>
    <fullName>D_Expertise_du_bien_realisee__c</fullName>
    <label>Dte - Expertise du bien réalisée</label>
    <type>Date</type>
</CustomField>