force-app/main/default/objects/Dossier__c/fields/D_Expertise_du_bien_requise__c.field-meta.xml
<CustomField>
    <fullName>D_Expertise_du_bien_requise__c</fullName>
    <label>Dte - Expertise du bien requise</label>
    <type>Date</type>
</CustomField>