force-app/main/default/objects/Dossier__c/fields/D_Facture_avancee__c.field-meta.xml
<CustomField>
    <fullName>D_Facture_avancee__c</fullName>
    <label>Dte - Facture avancée</label>
    <type>Date</type>
</CustomField>