force-app/main/default/objects/Dossier__c/fields/D_Facture_payee_en_partie__c.field-meta.xml
<CustomField>
    <fullName>D_Facture_payee_en_partie__c</fullName>
    <label>Dte - Facture payée en partie</label>
    <type>Date</type>
</CustomField>