force-app/main/default/objects/Dossier__c/fields/D_Facture_Payee_global__c.field-meta.xml
<CustomField>
    <fullName>D_Facture_Payee_global__c</fullName>
    <label>Dte - Facture Payée</label>
    <type>Date</type>
</CustomField>