force-app/main/default/objects/Dossier__c/fields/D_Facture_validee__c.field-meta.xml
<CustomField>
    <fullName>D_Facture_validee__c</fullName>
    <label>Dte - Facture validée</label>
    <type>Date</type>
</CustomField>