force-app/main/default/objects/Dossier__c/fields/D_Fiche_renseignement_employeur__c.field-meta.xml
<CustomField>
    <fullName>D_Fiche_renseignement_employeur__c</fullName>
    <label>D Fiche renseignement employeur</label>
    <type>Date</type>
</CustomField>