force-app/main/default/objects/Dossier__c/fields/D_Jusfiticatif_d_adresse__c.field-meta.xml
<CustomField>
    <fullName>D_Jusfiticatif_d_adresse__c</fullName>
    <label>D Jusfiticatif d&apos;adresse</label>
    <type>Date</type>
</CustomField>