force-app/main/default/objects/Dossier__c/fields/d_lai_a_facturer__c.field-meta.xml
<CustomField>
    <fullName>d_lai_a_facturer__c</fullName>
    <formula>IF (
(  Dossier_d_bloqu__c = true) &amp;&amp;  (Facture_deposee__c = false ), today () -  Date_deblocage__c,

IF (( Dossier_d_bloqu__c = true) &amp;&amp;  (Facture_deposee__c = true ),  Date_d_p_t_facture__c -  Date_deblocage__c , 0))</formula>
    <label>délai a facturer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>