force-app/main/default/objects/Dossier__c/fields/D_lai_d_blocage_d_pass__c.field-meta.xml
<CustomField>
    <fullName>D_lai_d_blocage_d_pass__c</fullName>
    <formula>IF(
 (Delai_deblocage__c &gt; 10), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai déblocage dépassé</label>
    <type>Checkbox</type>
</CustomField>