force-app/main/default/objects/Dossier__c/fields/D_lai_d_p_t__c.field-meta.xml
<CustomField>
    <fullName>D_lai_d_p_t__c</fullName>
    <formula>if(
( Dossier_Constitue_P1__c =true)&amp;&amp;( Depot_Banque__c =false),today () -  Dte_Dossier_Constitue_P1__c ,
if(
( Dossier_Constitue_P1__c =true)&amp;&amp;( Depot_Banque__c =true), Date_depot_dossier__c -  Dte_Dossier_Constitue_P1__c ,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai dépôt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>