force-app/main/default/objects/Dossier__c/fields/D_lai_dition_des_contrats__c.field-meta.xml
<CustomField>
    <fullName>D_lai_dition_des_contrats__c</fullName>
    <formula>if(
( Dossier_complet_P2_3__c  =true)&amp;&amp;(  Edition_du_contrat_de_pr_t__c  =false),today () - D_Dossier_complet_P2_3__c ,
if(
( Dossier_complet_P2_3__c  =true)&amp;&amp;(Edition_du_contrat_de_pr_t__c  =true),Dte_edition_des_contrats_de_pret__c  -  D_Dossier_complet_P2_3__c,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai édition des contrats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>