force-app/main/default/objects/Dossier__c/fields/D_lai_ODC__c.field-meta.xml
<CustomField>
    <fullName>D_lai_ODC__c</fullName>
    <formula>if(
( Compte_Bancaire_Ouvert__c = true), D_Ouverture_de_cmpt_realisee__c -  Date_accord_dossier__c ,
if( 
(Compte_Bancaire_Ouvert__c = false), today() -  Date_accord_dossier__c ,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai ODC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>