force-app/main/default/objects/Dossier__c/fields/D_lai_OPC_d_pass__c.field-meta.xml
<CustomField>
    <fullName>D_lai_OPC_d_pass__c</fullName>
    <formula>IF( D_lai_d_obtention_accord_OPC__c &gt; 7
,True,False)</formula>
    <label>Délai OPC dépassé</label>
    <type>Checkbox</type>
</CustomField>