force-app/main/default/objects/Dossier__c/fields/D_lai_P_M_P1__c.field-meta.xml
<CustomField>
    <fullName>D_lai_P_M_P1__c</fullName>
    <formula>IF ( 
   ( Dossier_Complet__c),  Date_Compl_tude_Dossier__c -  D_Pieces_manquantes_P1__c,
  IF (
    (  Dossier_Complet__c = False), today() -  D_Pieces_manquantes_P1__c ,
    0))</formula>
    <label>Délai P.M P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>