force-app/main/default/objects/Dossier__c/fields/d_lai_P_M_P2_3__c.field-meta.xml
<CustomField>
    <fullName>d_lai_P_M_P2_3__c</fullName>
    <formula>IF ( 
   (  Dossier_complet_P2_3__c ),   D_Dossier_complet_P2_3__c -   D_Pieces_manquantes_P2_3__c ,
  IF (
    (   Dossier_complet_P2_3__c = False), today() -   D_Pieces_manquantes_P2_3__c  ,
    0))</formula>
    <label>délai P.M P2&amp;3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>