force-app/main/default/objects/Dossier__c/fields/D_lai_signature_des_contrats__c.field-meta.xml
<CustomField>
    <fullName>D_lai_signature_des_contrats__c</fullName>
    <formula>if(
( Edition_du_contrat_de_pr_t__c =true)&amp;&amp;(Env_contr_pret_signes_leg_bq__c=false),today () -  Dte_edition_des_contrats_de_pret__c ,
if(
(  Edition_du_contrat_de_pr_t__c  =true)&amp;&amp;( Env_contr_pret_signes_leg_bq__c  =true), D_Env_contr_pret_signes_leg_bq__c  -  Dte_edition_des_contrats_de_pret__c ,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai signature des contrats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>