force-app/main/default/objects/Dossier__c/fields/D_Lettre_accompagnement_fourni_client__c.field-meta.xml
<CustomField>
    <fullName>D_Lettre_accompagnement_fourni_client__c</fullName>
    <label>Dte-Lettre d&apos;accompagn fourni au client</label>
    <type>Date</type>
</CustomField>