force-app/main/default/objects/Dossier__c/fields/D_lettre_engagement_notaire_chez_banque__c.field-meta.xml
<CustomField>
    <fullName>D_lettre_engagement_notaire_chez_banque__c</fullName>
    <label>Dte Lettre d&apos;eng notaire chez banque</label>
    <type>Date</type>
</CustomField>