force-app/main/default/objects/Dossier__c/fields/D_Levee_des_reserves__c.field-meta.xml
<CustomField>
    <fullName>D_Levee_des_reserves__c</fullName>
    <label>Dte - Levée des reserves</label>
    <type>Date</type>
</CustomField>