force-app/main/default/objects/Dossier__c/fields/D_Min_renv_not_par_serv_jur__c.field-meta.xml
<CustomField>
    <fullName>D_Min_renv_not_par_serv_jur__c</fullName>
    <label>Dte - Min renv au not par le serv jur</label>
    <type>Date</type>
</CustomField>