force-app/main/default/objects/Dossier__c/fields/D_Minute_validee_par_service_juridique__c.field-meta.xml
<CustomField>
    <fullName>D_Minute_validee_par_service_juridique__c</fullName>
    <label>Dte-Minute val par le service juridique1</label>
    <type>Date</type>
</CustomField>