force-app/main/default/objects/Dossier__c/fields/D_Modele_J_du_RC__c.field-meta.xml
<CustomField>
    <fullName>D_Modele_J_du_RC__c</fullName>
    <label>D Modèle &quot;J&quot; du RC - 2 MOIS</label>
    <type>Date</type>
</CustomField>