force-app/main/default/objects/Dossier__c/fields/D_Ouverture_de_cmpt_realisee__c.field-meta.xml
<CustomField>
    <fullName>D_Ouverture_de_cmpt_realisee__c</fullName>
    <label>Dte Ouverture de cmpt réalisée</label>
    <type>Date</type>
</CustomField>