force-app/main/default/objects/Dossier__c/fields/D_Passeport__c.field-meta.xml
<CustomField>
    <fullName>D_Passeport__c</fullName>
    <label>D Passeport</label>
    <type>Date</type>
</CustomField>