force-app/main/default/objects/Dossier__c/fields/D_Patente__c.field-meta.xml
<CustomField>
    <fullName>D_Patente__c</fullName>
    <label>D Patente</label>
    <type>Date</type>
</CustomField>