force-app/main/default/objects/Dossier__c/fields/D_Pieces_manquantes_P1__c.field-meta.xml
<CustomField>
    <fullName>D_Pieces_manquantes_P1__c</fullName>
    <label>Dte - Pièces manquantes P1</label>
    <type>Date</type>
</CustomField>