force-app/main/default/objects/Dossier__c/fields/D_Pieces_manquantes_P2_3__c.field-meta.xml
<CustomField>
    <fullName>D_Pieces_manquantes_P2_3__c</fullName>
    <label>Dte - Pièces manquantes P2et3</label>
    <type>Date</type>
</CustomField>