force-app/main/default/objects/Dossier__c/fields/D_PV_de_distribution_des_dividendes__c.field-meta.xml
<CustomField>
    <fullName>D_PV_de_distribution_des_dividendes__c</fullName>
    <label>D PV de distribution des dividendes</label>
    <type>Date</type>
</CustomField>