force-app/main/default/objects/Dossier__c/fields/D_RDV_Ouverture_de_compte_programme__c.field-meta.xml
<CustomField>
    <fullName>D_RDV_Ouverture_de_compte_programme__c</fullName>
    <label>Dte - RDV Ouverture de compte programmé</label>
    <type>Date</type>
</CustomField>