force-app/main/default/objects/Dossier__c/fields/D_RDV_pris_visite_medicale__c.field-meta.xml
<CustomField>
    <fullName>D_RDV_pris_visite_medicale__c</fullName>
    <label>Dte - RDV pris visite medicale</label>
    <type>Date</type>
</CustomField>