force-app/main/default/objects/Dossier__c/fields/D_Recap_CNSS__c.field-meta.xml
<CustomField>
    <fullName>D_Recap_CNSS__c</fullName>
    <label>D Recap CNSS</label>
    <type>Date</type>
</CustomField>