force-app/main/default/objects/Dossier__c/fields/D_Registre_de_commerce__c.field-meta.xml
<CustomField>
    <fullName>D_Registre_de_commerce__c</fullName>
    <label>D Registre de commerce</label>
    <type>Date</type>
</CustomField>