force-app/main/default/objects/Dossier__c/fields/D_Releves_du_compte_bancaire_Pro_12mois__c.field-meta.xml
<CustomField>
    <fullName>D_Releves_du_compte_bancaire_Pro_12mois__c</fullName>
    <label>D Relevés du compte bancaire Pro-12MOIS</label>
    <type>Date</type>
</CustomField>