force-app/main/default/objects/Dossier__c/fields/D_Reponse_assurance_recue__c.field-meta.xml
<CustomField>
    <fullName>D_Reponse_assurance_recue__c</fullName>
    <label>Dte - Réponse assurance reçue</label>
    <type>Date</type>
</CustomField>