force-app/main/default/objects/Dossier__c/fields/D_Retour_a_charges__c.field-meta.xml
<CustomField>
    <fullName>D_Retour_a_charges__c</fullName>
    <label>Dte - Retour à charges</label>
    <type>Date</type>
</CustomField>