force-app/main/default/objects/Dossier__c/fields/D_Sign_min_par_bq_vend_ach_dev_not__c.field-meta.xml
<CustomField>
    <fullName>D_Sign_min_par_bq_vend_ach_dev_not__c</fullName>
    <label>Dte-Sig min par bq le vend ach dev not</label>
    <type>Date</type>
</CustomField>