force-app/main/default/objects/Dossier__c/fields/D_Signature_Assurances__c.field-meta.xml
<CustomField>
    <fullName>D_Signature_Assurances__c</fullName>
    <label>Dte - Signature Assurances</label>
    <type>Date</type>
</CustomField>