force-app/main/default/objects/Dossier__c/fields/D_Signature_de_OPC__c.field-meta.xml
<CustomField>
    <fullName>D_Signature_de_OPC__c</fullName>
    <label>Dte - Signature de l&apos;OPC</label>
    <type>Date</type>
</CustomField>