force-app/main/default/objects/Dossier__c/fields/D_Simple_descriptif_du_bien_objet_du_cr__c.field-meta.xml
<CustomField>
    <fullName>D_Simple_descriptif_du_bien_objet_du_cr__c</fullName>
    <inlineHelpText>D Simple descriptif du bien objet du crédit demandé</inlineHelpText>
    <label>D Simple descriptif du bien</label>
    <type>Date</type>
</CustomField>