force-app/main/default/objects/Dossier__c/fields/D_Tableaux_d_amortissement__c.field-meta.xml
<CustomField>
    <fullName>D_Tableaux_d_amortissement__c</fullName>
    <label>D Tableaux d&apos;amortissement</label>
    <type>Date</type>
</CustomField>