force-app/main/default/objects/Dossier__c/fields/D_Taxe_professionnelle__c.field-meta.xml
<CustomField>
    <fullName>D_Taxe_professionnelle__c</fullName>
    <label>D Taxe professionnelle - 2 ANS</label>
    <type>Date</type>
</CustomField>