force-app/main/default/objects/Dossier__c/fields/D_Traduction_des_documents__c.field-meta.xml
<CustomField>
    <fullName>D_Traduction_des_documents__c</fullName>
    <label>D Traduction des documents</label>
    <type>Date</type>
</CustomField>