force-app/main/default/objects/Dossier__c/fields/D_VEFA_caution_bq_remise_bq_prom__c.field-meta.xml
<CustomField>
    <fullName>D_VEFA_caution_bq_remise_bq_prom__c</fullName>
    <label>Dte-VEFA caut bq remise par bq du prom</label>
    <type>Date</type>
</CustomField>