force-app/main/default/objects/Dossier__c/fields/D_visite_medicale_effectuee__c.field-meta.xml
<CustomField>
    <fullName>D_visite_medicale_effectuee__c</fullName>
    <label>Dte visite médicale effectuée</label>
    <type>Date</type>
</CustomField>