force-app/main/default/objects/Dossier__c/fields/Date_accord_dossier__c.field-meta.xml
<CustomField>
    <fullName>Date_accord_dossier__c</fullName>
    <label>Date Accord</label>
    <type>Date</type>
</CustomField>