force-app/main/default/objects/Dossier__c/fields/Date_Compl_tude_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Date_Compl_tude_Dossier__c</fullName>
    <label>Date Complétude Dossier</label>
    <type>Date</type>
</CustomField>