force-app/main/default/objects/Dossier__c/fields/Date_d_p_t_facture__c.field-meta.xml
<CustomField>
    <fullName>Date_d_p_t_facture__c</fullName>
    <label>Date dépôt facture</label>
    <type>Date</type>
</CustomField>