force-app/main/default/objects/Dossier__c/fields/Date_deblocage__c.field-meta.xml
<CustomField>
    <fullName>Date_deblocage__c</fullName>
    <label>Date Déblocage</label>
    <type>Date</type>
</CustomField>