force-app/main/default/objects/Dossier__c/fields/Date_depot_dossier__c.field-meta.xml
<CustomField>
    <fullName>Date_depot_dossier__c</fullName>
    <label>Date dépôt dossier</label>
    <type>Date</type>
</CustomField>