force-app/main/default/objects/Dossier__c/fields/Date_du_premier_CANEVAS__c.field-meta.xml
<CustomField>
    <fullName>Date_du_premier_CANEVAS__c</fullName>
    <label>Date du premier CANEVAS</label>
    <type>DateTime</type>
</CustomField>