force-app/main/default/objects/Dossier__c/fields/Date_est_de_r_solution_X_Vendeur__c.field-meta.xml
<CustomField>
    <fullName>Date_est_de_r_solution_X_Vendeur__c</fullName>
    <label>Date est. de résolution X Vendeur</label>
    <type>Date</type>
</CustomField>