force-app/main/default/objects/Dossier__c/fields/Date_estim_accord__c.field-meta.xml
<CustomField>
    <fullName>Date_estim_accord__c</fullName>
    <label>Date estimé accord</label>
    <type>Date</type>
</CustomField>