force-app/main/default/objects/Dossier__c/fields/Date_Estim_D_blocage__c.field-meta.xml
<CustomField>
    <fullName>Date_Estim_D_blocage__c</fullName>
    <label>Date Estimé Déblocage</label>
    <type>Date</type>
</CustomField>