force-app/main/default/objects/Dossier__c/fields/Date_Paiement_Facture__c.field-meta.xml
<CustomField>
    <fullName>Date_Paiement_Facture__c</fullName>
    <label>Date Paiement Facture</label>
    <type>Date</type>
</CustomField>